--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "private": true,
   "license": "MIT",
   "scripts": {
+    "start": "rid",
     "rid": "rid",
     "build": "rid build",
     "lint": "rid lint:alias",
     "link": "rid link",
+    "link:all": "rid link roc,roc-abstract-package-base-dev,roc-abstract-package-base",
     "test": "npm run lint"
   },
   "devDependencies": {
-    "@rocjs/roc-internal-dev": "^1.0.0",
-    "babel-plugin-transform-async-to-generator": "~6.5.0"
+    "@rocjs/roc-internal-dev": "^2.0.0",
+    "babel-plugin-transform-async-to-generator": "~6.8.0"
   }
 }
